--- a/microservices_presentation.html
+++ b/microservices_presentation.html
@@ -4277,6 +4277,54 @@ networks:
             </div>
         </div>
 
+        <!-- Slide 7: Microservice Communication -->
+        <div class="slide">
+            <div class="slide-header">
+                <h2>Comunicación entre Microservicios</h2>
+            </div>
+            <div class="content">
+                <h3 style="margin-bottom: 20px;">Patrones de Comunicación de Microservicios</h3>
+                
+                <div class="comparison">
+                    <div class="comparison-box" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);">
+                        <h3>1. Comunicación Síncrona / Diseño sin Broker</h3>
+                        <ul>
+                            <li>HTTP / REST</li>
+                            <li>gRPC (Google Remote Procedure Call)</li>
+                        </ul>
+                        
+                        <div style="margin-top: 20px; text-align: left; background: rgba(255,255,255,0.1); padding: 15px; border-radius: 10px;">
+                            <h4 style="color: white; margin-bottom: 10px;">1. HTTP</h4>
+                            <p style="color: white; font-size: 0.9em; margin-bottom: 5px;">El Microservicio Cliente envía una solicitud al Microservicio Servidor;</p>
+                            <p style="color: white; font-size: 0.9em;">El Microservicio Servidor envía una respuesta al Microservicio Cliente.</p>
+                        </div>
+                    </div>
+
+                    <div class="comparison-box" style="background: linear-gradient(135deg, #fa709a 0%, #fee140 100%);">
+                        <h3>2. Comunicación Asíncrona / Diseño con Broker</h3>
+                        <ul>
+                            <li>RabbitMQ</li>
+                            <li>Azure Service Bus y Azure Event Grid</li>
+                            <li>Apache Kafka</li>
+                            <li>SQS (Amazon Simple Queue Service)</li>
+                        </ul>
+
+                        <div style="margin-top: 20px; text-align: left; background: rgba(255,255,255,0.1); padding: 15px; border-radius: 10px;">
+                            <h4 style="color: white; margin-bottom: 10px;">2. Cola de Mensajes</h4>
+                            <p style="color: white; font-size: 0.9em; margin-bottom: 5px;">El Microservicio Productor envía un mensaje a la Cola de Mensajes;</p>
+                            <p style="color: white; font-size: 0.9em; margin-bottom: 5px;">La Cola de Mensajes almacena/retiene el mensaje hasta que el Microservicio Consumidor lo lee;</p>
+                            <p style="color: white; font-size: 0.9em;">El Microservicio Consumidor lee el mensaje de la Cola de Mensajes.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div style="margin-top: 30px; padding: 25px; background: #f7fafc; border-radius: 15px; border-left: 5px solid #667eea;">
+                    <h3>HttpClient</h3>
+                    <p>HttpClient es una clase para enviar solicitudes HTTP a un recurso HTTP específico (endpoints de otros microservicios o endpoints de API de terceros) y recibir respuestas HTTP de los mismos.</p>
+                </div>
+            </div>
+        </div>
+
         <div class="slide-counter">
             <select id="sectionNav" class="nav-select" onchange="jumpToSection(this.value)">
                 <option value="0">Inicio</option>
